Change selfservice button copy
From 'Cancel Rider Match Request' to 'Reject Current Ride Offer'

--- a/self-service/index.html
+++ b/self-service/index.html
@@ -120,7 +120,7 @@
                         <p id="info"></p>
                         <div class="form-group">
                             <button class="button button--danger" id="btnCancelRideRequest">Cancel Ride Request</button>
-                            <button class="button button--danger" id="btnCancelRiderMatch">Cancel Rider Match Request</button>
+                            <button class="button button--danger" id="btnCancelRiderMatch">Reject Current Ride Offer</button>
                             <button class="button button--danger" id="btnCancelDriveOffer">Cancel Drive Offer Request</button>
                             <button class="button button--danger" id="btnCancelDriverMatch">Cancel Driver Match Request</button>
                             <button class="button button--danger" id="btnPauseDriverMatch">Pause Driver Match Request</button>
